gccida/g0/have_add2_insn
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/have_add2_insn/src/optabs.c:4320:74: error: use of undeclared identifier 'insn_data_0'
return insn_data_0[icode].operand->predicate( x, *( ( unsigned __int16 *)insn_data_0[icode].operand + 8)) 
                                                                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/have_add2_insn/src/optabs.c:4320:8: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
return insn_data_0[icode].operand->predicate( x, *( ( unsigned __int16 *)insn_data_0[icode].operand + 8)) 
       ^~~~~~~~~~~
       insn_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/have_add2_insn/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/have_add2_insn/src/optabs.c:4323:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int16 *)&insn_data_0[icode].operand[1] + 8)) 
  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/have_add2_insn/src/optabs.c:4323:41: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
( machine_mode)*( ( unsigned __int16 *)&insn_data_0[icode].operand[1] + 8)) 
                                        ^~~~~~~~~~~
                                        insn_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/have_add2_insn/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/have_add2_insn/src/optabs.c:4321:4: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
&& insn_data_0[icode].operand[1].predicate( 
   ^~~~~~~~~~~
   insn_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/have_add2_insn/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/have_add2_insn/src/optabs.c:4326:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int16 *)&insn_data_0[icode].operand[2] + 8)); 
  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/have_add2_insn/src/optabs.c:4326:41: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
( machine_mode)*( ( unsigned __int16 *)&insn_data_0[icode].operand[2] + 8)); 
                                        ^~~~~~~~~~~
                                        insn_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/have_add2_insn/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/have_add2_insn/src/optabs.c:4324:4: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
&& insn_data_0[icode].operand[2].predicate( 
   ^~~~~~~~~~~
   insn_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/have_add2_insn/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/have_add2_insn/src/obj/optabs.o] Error 1
